done admin layout

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -16453,14 +16453,14 @@ a.tag-addon:hover {
 }
 
 :root {
-    --primary-bg-color: #38cab3;
+    --primary-bg-color: #139c7f;
     --primary-bg-hover: #5cd3b9;
-    --primary-bg-border: #38cab3;
+    --primary-bg-border: #139c7f;
     --primary02: rgba(28, 213, 174, 0.2);
     --primary05: rgba(28, 213, 174, 0.5);
     --primary-transparentcolor: rgba(28, 213, 174, 0.2);
     --transparentprimary-transparentcolor: rgba(255, 255, 255, 0.05);
-    --transparent-body: #38cab3;
+    --transparent-body: #139c7f;
     --transparent-theme: rgba(0, 0, 0, 0.1);
     --blue: var(--primary-bg-color);
     --indigo: var(--primary-bg-color);
@@ -29555,22 +29555,22 @@ a.option-dots {
 
 .rtl .popover-primary.bs-popover-start .popover-arrow::after,
 .rtl .popover-primary.bs-popover-auto[data-popper-placement^=start] .popover-arrow::after {
-    border-left-color: #38cab3;
+    border-left-color: #139c7f;
 }
 
 .rtl .popover-primary.bs-popover-end .popover-arrow::after,
 .rtl .popover-primary.bs-popover-auto[data-popper-placement^=end] .popover-arrow::after {
-    border-right-color: #38cab3;
+    border-right-color: #139c7f;
 }
 
 .rtl .popover-secondary.bs-popover-start .popover-arrow::after,
 .rtl .popover-secondary.bs-popover-auto[data-popper-placement^=start] .popover-arrow::after {
-    border-left-color: #38cab3;
+    border-left-color: #139c7f;
 }
 
 .rtl .popover-secondary.bs-popover-end .popover-arrow::after,
 .rtl .popover-secondary.bs-popover-auto[data-popper-placement^=end] .popover-arrow::after {
-    border-right-color: #38cab3;
+    border-right-color: #139c7f;
 }
 
 .rtl .popover {
@@ -29661,42 +29661,42 @@ a.option-dots {
 
 .rtl .tooltip-primary.bs-tooltip-start .tooltip-arrow::before,
 .rtl .tooltip-primary.bs-tooltip-auto[data-popper-placement^=start] .tooltip-arrow::before {
-    border-left-color: #38cab3;
+    border-left-color: #139c7f;
 }
 
 .rtl .tooltip-primary.bs-tooltip-end .tooltip-arrow::before,
 .rtl .tooltip-primary.bs-tooltip-auto[data-popper-placement^=end] .tooltip-arrow::before {
-    border-right-color: #38cab3;
+    border-right-color: #139c7f;
 }
 
 .rtl .tooltip-primary1.bs-tooltip-start .tooltip-arrow::before,
 .rtl .tooltip-primary1.bs-tooltip-auto[data-popper-placement^=start] .tooltip-arrow::before {
-    border-left-color: #38cab3;
+    border-left-color: #139c7f;
 }
 
 .rtl .tooltip-primary1.bs-tooltip-end .tooltip-arrow::before,
 .rtl .tooltip-primary1.bs-tooltip-auto[data-popper-placement^=end] .tooltip-arrow::before {
-    border-right-color: #38cab3;
+    border-right-color: #139c7f;
 }
 
 .rtl .tooltip-secondary.bs-tooltip-start .tooltip-arrow::before,
 .rtl .tooltip-secondary.bs-tooltip-auto[data-popper-placement^=start] .tooltip-arrow::before {
-    border-left-color: #38cab3;
+    border-left-color: #139c7f;
 }
 
 .rtl .tooltip-secondary.bs-tooltip-end .tooltip-arrow::before,
 .rtl .tooltip-secondary.bs-tooltip-auto[data-popper-placement^=end] .tooltip-arrow::before {
-    border-right-color: #38cab3;
+    border-right-color: #139c7f;
 }
 
 .rtl .tooltip-secondary1.bs-tooltip-start .tooltip-arrow::before,
 .rtl .tooltip-secondary1.bs-tooltip-auto[data-popper-placement^=start] .tooltip-arrow::before {
-    border-left-color: #38cab3;
+    border-left-color: #139c7f;
 }
 
 .rtl .tooltip-secondary1.bs-tooltip-end .tooltip-arrow::before,
 .rtl .tooltip-secondary1.bs-tooltip-auto[data-popper-placement^=end] .tooltip-arrow::before {
-    border-right-color: #38cab3;
+    border-right-color: #139c7f;
 }
 
 .rtl .tooltip {
@@ -33022,7 +33022,7 @@ a.option-dots {
 }
 
 .rtl .main-chat-list .media.selected {
-    border-right: 1px solid #38cab3;
+    border-right: 1px solid #139c7f;
     border-left: inherit;
 }
 
@@ -33172,7 +33172,7 @@ a.option-dots {
 }
 
 .rtl .main-msg-wrapper.left:nth-child(1):before {
-    border-left-color: #38cab3;
+    border-left-color: #139c7f;
 }
 
 .rtl .main-msg-wrapper.left:nth-child(1):after {
@@ -33223,7 +33223,7 @@ a.option-dots {
 }
 
 .rtl .main-contact-item.selected {
-    border-left-color: #38cab3;
+    border-left-color: #139c7f;
 }
 
 .rtl .main-contact-body {
@@ -33372,7 +33372,7 @@ a.option-dots {
 }
 
 .rtl .main-invoice-list .selected {
-    border-left-color: #38cab3;
+    border-left-color: #139c7f;
 }
 
 @media (min-width: 992px) {
@@ -33638,7 +33638,7 @@ a.option-dots {
 }
 
 .rtl .border-start-primary {
-    border-left-color: #38cab3 !important;
+    border-left-color: #139c7f !important;
 }
 
 .rtl .border-start-success {
@@ -56688,7 +56688,7 @@ div.dtr-bs-modal table.table tr:first-child td {
     padding: 10px;
     background-color: #2a2e3f;
     border: none !important;
-    color: #38cab3;
+    color: #139c7f;
     font-family: Monospace, Calibri, Verdana, Helvetica, sans-serif;
     max-width: 100%;
     min-width: 100%;
@@ -60866,7 +60866,7 @@ License: MIT
 
 .SumoSelect .select-all.selected>span i,
 .SumoSelect .select-all.partial>span i {
-    background-color: #38cab3;
+    background-color: #139c7f;
     box-shadow: none;
     border-color: transparent;
     background-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAgAAAAGCAYAAAD+Bd/7AAAABHNCSVQICAgIfAhkiAAAAAlwSFlzAAALEgAACxIB0t1+/AAAABx0RVh0U29mdHdhcmUAQWRvYmUgRmlyZXdvcmtzIENTNXG14zYAAABMSURBVAiZfc0xDkAAFIPhd2Kr1WRjcAExuIgzGUTIZ/AkImjSofnbNBAfHvzAHjOKNzhiQ42IDFXCDivaaxAJd0xYshT3QqBxqnxeHvhunpu23xnmAAAAAElFTkSuQmCC");
@@ -61013,7 +61013,7 @@ License: MIT
 }
 
 .SumoSelect>.optWrapper.multiple>.options li.opt.selected span i {
-    background-color: #38cab3;
+    background-color: #139c7f;
     box-shadow: none;
     border-color: transparent;
     background-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAgAAAAGCAYAAAD+Bd/7AAAABHNCSVQICAgIfAhkiAAAAAlwSFlzAAALEgAACxIB0t1+/AAAABx0RVh0U29mdHdhcmUAQWRvYmUgRmlyZXdvcmtzIENTNXG14zYAAABMSURBVAiZfc0xDkAAFIPhd2Kr1WRjcAExuIgzGUTIZ/AkImjSofnbNBAfHvzAHjOKNzhiQ42IDFXCDivaaxAJd0xYshT3QqBxqnxeHvhunpu23xnmAAAAAElFTkSuQmCC");
