--- a/src/assets/scss/style.css
+++ b/src/assets/scss/style.css
@@ -16413,7 +16413,7 @@ a.tag-addon:hover {
 
 :root {
   --primary-bg-color: #139c7f;
-  --primary-bg-hover: #5cd3b9;
+  --primary-bg-hover: #094e3f;
   --primary-bg-border: #139c7f;
   --primary02: rgba(28, 213, 174, 0.2);
   --primary05: rgba(28, 213, 174, 0.5);
