--- a/src/index.scss
+++ b/src/index.scss
@@ -954,7 +954,7 @@
 @media (max-width: 991px) {
   .app-content,
   .horizontal-content {
-    padding-top: 60px !important;
+    padding-top: 0 !important;
   }
   .handle-counter .btn {
     padding: 5px 12px !important;
