DOne: profile, Notification, Booking request, Withdrawal Request

--- a/src/assets/scss/custom/_custom-styles.scss
+++ b/src/assets/scss/custom/_custom-styles.scss
@@ -396,7 +396,7 @@ a.close.disabled {
 /* ###### 6.3 Global  ###### */
 
 body {
-  font-family: "Poppins", sans-serif;
+  font-family: "Inter", sans-serif;
 }
 
 .main-body {
@@ -2226,7 +2226,7 @@ pre {
 }
 
 .main-logo1 {
-  font-family: poppins;
+  font-family: Inter;
   font-weight: 600;
 }
 
@@ -3523,12 +3523,12 @@ hr {
 #morrisDonut1.morris-donut-wrapper-demo svg text {
   font-size: 12px !important;
   font-weight: 500 !important;
-  font-family: "Poppins", sans-serif !important;
+  font-family: "Inter", sans-serif !important;
 }
 #morrisDonut2.morris-donut-wrapper-demo svg text {
   font-size: 12px !important;
   font-weight: 500 !important;
-  font-family: "Poppins", sans-serif !important;
+  font-family: "Inter", sans-serif !important;
 }
 
 .form-label {
