--- a/src/assets/scss/plugins/_smartphoto.scss
+++ b/src/assets/scss/plugins/_smartphoto.scss
@@ -89,7 +89,7 @@
     overflow: hidden;
     background-color: black;
     opacity: 1;
-    font-family: sans-serif;
+    font-family: "Inter", sans-serif;
     cursor: pointer;
     -webkit-transition: opacity 0.3s ease-out;
     -moz-transition: opacity 0.3s ease-out;
