--- a/src/assets/scss/plugins/_morris.scss
+++ b/src/assets/scss/plugins/_morris.scss
@@ -8,7 +8,7 @@
         color: #666;
         background: rgba(255, 255, 255, 0.8);
         border: solid 2px rgba(230, 230, 230, 0.8);
-        font-family: sans-serif;
+        font-family: "Inter", sans-serif;
         font-size: 12px;
         text-align: center;
 
