--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -83,7 +83,7 @@ License        :   Licensed under ThemeForest License
 @import "variables";
 
 /* ######## FONT ######## */
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
 /* ######## BOOTSTRAP ######## */
 @import "bootstrap/accordion";
